Backports JDK17 configurations from CC 5
Backports configuration changes done in CC 5 to support JDK 17.
Aligns as much as possible in terms of formatting, fixes, any helpful
addition.